feat: kotlin rewrite